# i18nify

./: CHANGELOG.md  Cargo.toml  README.md  README_CN.md  example_path.rs
examples/: axum.rs  basic.rs  basic_toml.rs
i18nify-macro/: Cargo.toml  README.md
i18nify-macro/src/: error.rs  lib.rs  placeholder_parsing.rs  utils.rs
src/: axum.rs  error.rs  lib copy.rs  lib.rs  schema.rs  utils.rs
tests/toml_locales/: en.toml  zh_CN.toml
tests/zh_locales/: en.json  zh_CN.json
