[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Safe localization library using code generation"
documentation = "https://docs.rs/i18n_codegen"
edition = "2018"
homepage = "https://github.com/davidpdrsn/i18n_codegen"
keywords = ["web", "i18n", "localization", "translation"]
license = "MIT"
name = "i18n_codegen"
readme = "README.md"
repository = "https://github.com/davidpdrsn/i18n_codegen.git"
version = "0.1.1"

[dependencies]
syn = "2.0.76"
quote = "1.0.37"
proc-macro2 = "1.0.86"
serde_json = "1.0.127"
heck = "0.5.0"
rayon = "1.10.0"

[dev_dependencies]
trybuild = "1.0.99"
version-sync = "0.9.5"

[lib]
proc-macro = true
path = "src/lib.rs"
