[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>","Kingz Cheung <kingzcheung@gmail.com>"]
categories = ["web-programming","Internationalization (i18n)"]
description = "A type-safe localization library using code generation"
documentation = "https://docs.rs/i18nify"
edition = "2021"
homepage = "https://github.com/kingzcheung/i18nify"
keywords = ["web", "i18n", "localization", "translation","Internationalisation","intl","type-safe"]
license = "MIT"
name = "i18nify"
readme = "README.md"
repository = "https://github.com/kingzcheung/i18nify.git"
version = "0.2.1"

[dependencies]
syn = {version="2.0.76", features = ["derive"] }
quote = "1.0.37"
proc-macro2 = "1.0.86"
serde_json = "1.0.127"
heck = "0.5.0"
rayon = "1.10.0"
thiserror = "1.0.63"
tinytemplate = "1.1"
# prettyplease = "0.2.22"

[dev-dependencies]
trybuild = "1.0.99"
version-sync = "0.9.5"

[lib]
proc-macro = true
# path = "src/lib.rs"
