[workspace]
resolver = "2"
members = ["i18nify-macro"]
[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>","Kingz Cheung <kingzcheung@gmail.com>"]
categories = ["web-programming","internationalization"]
description = "A type-safe localization library using code generation"
documentation = "https://docs.rs/i18nify"
edition = "2021"
homepage = "https://github.com/kingzcheung/i18nify"
keywords = ["i18n", "localization", "translation","Internationalisation","type-safe"]
license = "MIT"
name = "i18nify"
readme = "README.md"
repository = "https://github.com/kingzcheung/i18nify.git"
version = "0.4.1"
rust-version = "1.70"

[lib]
path = "src/lib.rs"

[dependencies]
i18nify-macro = { version = "0.4.1", path = "i18nify-macro", optional = true, default-features = false }
axum = { version = "0.7.7", features = ["tokio"], optional = true }
tokio = { version = "1.0", optional = true, features = ["macros", "rt-multi-thread"] }
# tower-http = { version = "0.6.1", optional = true }
futures-util = {version = "0.3.31", optional = true }
tower = { version = "0.5.1", optional = true }

[features]
default = ["json","axum"]
json = ["i18nify-macro/json"]
toml = ["i18nify-macro/toml"]
axum = ["dep:axum","tokio","tower","futures-util"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["json"]

[[example]]
name = "basic_toml"
path = "examples/basic_toml.rs"
required-features = ["toml"]

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum"]